--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <servlet.version>3.1.0</servlet.version>
         <lombok.version>1.18.36</lombok.version>
     </properties>
