--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,12 +7,27 @@
     <display-name>Archetype Created Web Application</display-name>
 
     <error-page>
-        <error-code>500</error-code>
-        <location>/WEB-INF/jsp/error/500.jsp</location>
+        <error-code>400</error-code>
+        <location>/WEB-INF/jsp/error/400.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/jsp/error/403.jsp</location>
     </error-page>
 
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/jsp/error/404.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/jsp/error/500.jsp</location>
+    </error-page>
+
+    <error-page>
+        <error-code>502</error-code>
+        <location>/WEB-INF/jsp/error/502.jsp</location>
     </error-page>
 </web-app>
