feat: override surfire plugin

--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,12 @@
 
     <build>
         <finalName>TodoApp</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
